# hanoi

./: .gitignore  .gitmodules  Cargo.toml  debug.sh  exp2.py  exp2_test.py  experiment.ipynb  experiment.py  package-lock.json  run.sh  test.sh
.cursor/: mcp.json
.devcontainer/: devcontainer.json
data/: adv1p1.han  adv1p2.han  builtin.han  csv.han  example.hanb.debuginfo.json  example.hanb.json  io.han  iter.han  list.han  main.han  mod.han  multi_iter.han  ssv.han  state_machine_type_notes.txt  str.han  vec.han
debug_with/: Cargo.toml
debug_with_trait/: Cargo.toml
debugc/: Cargo.toml
debugger/: Cargo.toml
experiments/: .gitignore  experiments.ts  experiments_test.ts  package-lock.json  package.json  statemachine_test.ts  statemachine_types_test.ts  tsconfig.json
from-pest/: Cargo.toml
from-raw-ast/: Cargo.toml
hanc/: Cargo.toml
lang/: Cargo.toml
lang/src/: ast.rs  compiler.rs  debugger.rs  flat.rs  hanoi.pest  ir.rs  lib.rs  linker.rs  main.rs  oldvm.rs  pen.rs  rawast.rs  runtime.rs  source.rs  vm.rs
lang/src/bytecode/: debuginfo.rs  mod.rs
lang/src/compiler2/: README.md  ast.rs  linked.rs  mod.rs  sugary.rs  unlinked.rs  unresolved.rs
lang/src/parser/: hanoi.pest  mod.rs  source.rs
lang/src/snapshots/: hanoi__compiler__tests__fn_decl_to_transformer.snap
lang/src/vm/: mod.rs  stack.rs  value.rs
src/: ast.rs  compiler.rs  debugger.rs  flat.rs  hanoi.pest  ir.rs  main.rs  rawast.rs  source.rs  vm.rs
vscode-hanoi/: .gitignore  DEVELOPMENT.md  LICENSE  README.md  build.bat  build.sh  language-configuration.json  package-lock.json  (+1 more)
(+13 files in other folders)
