[package]
name = "hanoi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
derive_more = {version="1.0.0", features= ["from", "into"]}
from-pest = "0.3.3"
itertools = "0.13.0"
pest = "2.7.13"
pest-ast = "0.3.5"
pest_derive = "2.7.13"
ratatui = "0.28.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-spanned-value = "0.1"
thiserror = "1.0.65"
typed-index-collections = "3.1.0"
from-raw-ast = {path = "../from-raw-ast"}
debug_with = {path = "../debug_with"}
debug_with_trait = {path = "../debug_with_trait"}

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
